[package]
name = "market-test"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "market_test"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = {version = "0.30.1", features = ["init-if-needed"]}
anchor-spl = { version = "0.30.1", features = ["metadata", "dex", "devnet"] }
bytemuck = { version = "1.4.0", features = ["derive", "min_const_generics"] }
# openbook = {version = "0.1.0", features = ["v1"]}
# solana-sdk = "1.18.2"
# solana-zk-token-sdk = "1.18.2"
# openbook = { git = "https://github.com/openbook-dex/program", package = "dex" }
# x25519-dalek = { git = "https://github.com/aptos-labs/x25519-dalek", branch = "zeroize_v1" } 
